# TONGUE-Core

./: .gitignore  CMakeLists.txt  Copilot_Instructions.txt  Minimum_Goals.txt  README.md  Readme.md.txt
include/Core/: AI.h  Ability.h  BuffSystem.h  Character.h  CombatSystem.h  Component.h  CooldownManager.h  CooldownSystem.h  CoreManager.h  Effect.h  Entity.h  Event.h  EventSystem.h  Leveling.h  Move.h  ResourceSystem.h  Stats.h  System.h
src/: AI.cpp  Ability.cpp  BuffSystem.cpp  Character.cpp  CombatSystem.cpp  Component.cpp  CooldownManager.cpp  CooldownSystem.cpp  CoreManager.cpp  Effect.cpp  Entity.cpp  Event.cpp  EventSystem.cpp  Leveling.cpp  Move.cpp  ResourceSystem.cpp  Stats.cpp  System.cpp
tests/: AdvancedScenarioTests.cpp  BuffSystemTests.cpp  CMakeLists.txt  CoreTests.cpp  ScenarioTests.cpp  StatsTests.cpp
